--- a/prepros-6.config
+++ b/prepros-6.config
@@ -35,18 +35,12 @@
       ]
     },
     {
-      "path": "app/pug/header/header.pug",
-      "imports": [
-        "app/pug/header/part_1.pug",
-        "app/pug/header/part_2.pug"
-      ]
-    },
-    {
       "path": "app/styl/styles.styl",
       "imports": [
         "app/styl/header.styl",
         "app/styl/main.styl",
-        "app/styl/special.styl"
+        "app/styl/special.styl",
+        "app/styl/footer.styl"
       ]
     },
     {
@@ -54,6 +48,13 @@
       "imports": [
         "app/pug/footer/part_1.pug",
         "app/pug/footer/part_2.pug"
+      ]
+    },
+    {
+      "path": "app/pug/header/header.pug",
+      "imports": [
+        "app/pug/header/part_1.pug",
+        "app/pug/header/part_2.pug"
       ]
     }
   ],
