--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,6 +26,7 @@
         "app/pug/header/header.pug",
         "app/pug/main.pug",
         "app/pug/special.pug",
+        "app/pug/store.pug",
         "app/pug/footer/footer.pug",
         "app/pug/style_and_scripts.pug",
         "app/pug/header/part_1.pug",
@@ -40,6 +41,7 @@
         "app/styl/header.styl",
         "app/styl/main.styl",
         "app/styl/special.styl",
+        "app/styl/store.styl",
         "app/styl/footer.styl"
       ]
     },
